[gd_scene load_steps=17 format=2]

[ext_resource path="res://images/Baseball-bat.png" type="Texture" id=1]
[ext_resource path="res://images/baseball.png" type="Texture" id=2]
[ext_resource path="res://images/Vertical-Line-PNG-Image.png" type="Texture" id=3]
[ext_resource path="res://RigidBody2D.gd" type="Script" id=4]
[ext_resource path="res://StaticBody2D.gd" type="Script" id=5]
[ext_resource path="res://Node.gd" type="Script" id=6]
[ext_resource path="res://brick.tscn" type="PackedScene" id=7]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=8]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://images/e4743a64eb6ce8c4fc5bf32f131b4623.jpg" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 141, 2.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 60.2993

[sub_resource type="DynamicFont" id=5]
size = 68
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 68
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 68
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28.5, 200.435 )

[node name="Main" type="Node"]
script = ExtResource( 6 )
brick_scene = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
stretch_mode = 1

[node name="Bat" type="StaticBody2D" parent="."]
position = Vector2( 295, 43 )
constant_linear_velocity = Vector2( 0, -150 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bat"]
position = Vector2( 300, 865.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Bat"]
position = Vector2( 299, 879 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="ball" type="RigidBody2D" parent="."]
position = Vector2( 423, 564 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ball"]
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="ball"]

[node name="CanvasLayer" type="CanvasLayer" parent="ball"]
script = ExtResource( 8 )

[node name="ScoreLabel" type="Label" parent="ball/CanvasLayer"]
anchor_top = 0.5
anchor_right = 0.025
anchor_bottom = 0.5
margin_left = 789.0
margin_top = -435.0
margin_right = 1092.0
margin_bottom = -352.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
uppercase = true

[node name="StartButton" type="Button" parent="ball/CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 812.0
margin_top = -196.0
margin_right = 1142.0
margin_bottom = -107.0
custom_fonts/font = SubResource( 7 )
text = "Start"

[node name="Message" type="Label" parent="ball/CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -41.5
margin_bottom = 41.5
custom_fonts/font = SubResource( 6 )
align = 1

[node name="wall-left" type="StaticBody2D" parent="."]
position = Vector2( 28, 499 )
scale = Vector2( 1, 2.5 )
constant_linear_velocity = Vector2( 150, 50 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wall-left"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall-left"]
position = Vector2( -1.5, 0 )
shape = SubResource( 3 )

[node name="wall-right" type="StaticBody2D" parent="."]
position = Vector2( 1892, 502 )
scale = Vector2( 1, 2.5 )
constant_linear_velocity = Vector2( -150, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wall-right"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall-right"]
position = Vector2( -1.5, 0 )
shape = SubResource( 3 )

[node name="wall-top" type="StaticBody2D" parent="."]
position = Vector2( 958, 28 )
rotation = 1.5708
scale = Vector2( 1, 4.8 )
constant_linear_velocity = Vector2( 0, 100 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wall-top"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall-top"]
position = Vector2( -1.5, 1.30432 )
shape = SubResource( 3 )

[node name="wall-bottom" type="Area2D" parent="."]
position = Vector2( 965, 1005 )
rotation = 1.5708
scale = Vector2( 1, 4.9 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wall-bottom"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall-bottom"]
position = Vector2( -1.5, 1.30432 )
shape = SubResource( 3 )

[node name="brick" parent="." instance=ExtResource( 7 )]

[connection signal="game_over" from="ball" to="." method="_on_ball_game_over"]
[connection signal="viewport_exited" from="ball/VisibilityNotifier2D" to="ball" method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="start_game" from="ball/CanvasLayer" to="." method="new_game"]
[connection signal="pressed" from="ball/CanvasLayer/StartButton" to="ball/CanvasLayer" method="_on_Button_pressed"]
[connection signal="update_scores" from="brick" to="." method="_on_brick_update_scores"]
